# relo

./: .gitignore  CMakeLists.txt  README.md  config.py  evaluate.py  gputransform.cpython-38-x86_64-linux-gnu.so.ori  infer_mine.py  loading_pointclouds_mine.py  lookup_liosam.py  lookup_liosam_batch.py  lookup_liosam_batch_icp.py  mapseg_from_liosam.py  package.xml  relocalization.py  relocalization_rosnode.py  relocalization_rossrv.py  requirements_noros.txt  tools.py  train_mine.py
generating_queries/campus/: config.py  dfall.csv  evaluation_database.pickle  evaluation_database.txt  evaluation_query.pickle  evaluation_query.txt  generate_test_sets_mine.py  generate_training_tuples_mine.py  test_queries_baseline_occ.pickle  test_queries_baseline_occ.pickle.txt  training_queries_baseline_occ.pickle  training_queries_baseline_occ.pickle.txt
log/: explain_model.txt  log_train.txt
loss/: loss_function.py
models/: DiSCO.py
multi-layer-polar-cython-cpu/cython/: gputransform.cpp
multi-layer-polar-cython-gpu/cython/: 1.pcd  gputransform.cpp  test.py
multi-layer-polar-cython-gpu/cython/gputransform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: client.py  server.py
srv/: relocalize_pointcloud.srv
tools/: CMakeCache.txt  CMakeLists.txt  Makefile  MapTransform  MapTransform.cpp  binpcd  binpcd.cpp  parameters.txt  pcd2bin.py
tools/velodyne_pcd/: query.pcd  test.pcd
